; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/emu10k1/extr_emu10k1x.c_snd_emu10k1x_midi_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/emu10k1/extr_emu10k1x.c_snd_emu10k1x_midi_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rawmidi = type { %struct.emu10k1x_midi* }
%struct.emu10k1x_midi = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_rawmidi*)* @snd_emu10k1x_midi_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_emu10k1x_midi_free(%struct.snd_rawmidi* %0) #0 {
  %2 = alloca %struct.snd_rawmidi*, align 8
  %3 = alloca %struct.emu10k1x_midi*, align 8
  store %struct.snd_rawmidi* %0, %struct.snd_rawmidi** %2, align 8
  %4 = load %struct.snd_rawmidi*, %struct.snd_rawmidi** %2, align 8
  %5 = getelementptr inbounds %struct.snd_rawmidi, %struct.snd_rawmidi* %4, i32 0, i32 0
  %6 = load %struct.emu10k1x_midi*, %struct.emu10k1x_midi** %5, align 8
  store %struct.emu10k1x_midi* %6, %struct.emu10k1x_midi** %3, align 8
  %7 = load %struct.emu10k1x_midi*, %struct.emu10k1x_midi** %3, align 8
  %8 = getelementptr inbounds %struct.emu10k1x_midi, %struct.emu10k1x_midi* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.emu10k1x_midi*, %struct.emu10k1x_midi** %3, align 8
  %10 = getelementptr inbounds %struct.emu10k1x_midi, %struct.emu10k1x_midi* %9, i32 0, i32 0
  store i32* null, i32** %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
